--- a/app/globals.css
+++ b/app/globals.css
@@ -18,7 +18,7 @@
   --shadow: 0 10px 30px rgba(245, 198, 68); /* Sombra para elementos elevados */
   --foreground: #171717; /* Color de primer plano, usado en modo oscuro */
 }
-
+/*hola
 /* =========================
    BODY Y TIPOGRAFÍA
    ========================= */
