--- a/app/globals.css
+++ b/app/globals.css
@@ -148,7 +148,7 @@ p {
   border: 1px solid transparent; /* Borde transparente para mantener tamaño */
 }
 .boton:hover {
-  filter: brightness(1.1); /* Efecto de brillo al pasar el mouse */
+  filter: brightness(1.1); /* este Efecto de brillo al pasar el mouse */
 } 
 /* =========================
    GRID Y TARJETAS
